syntax = "proto3";

package go.micro.srv.DeleteSession;

service Example {
	rpc DeleteSession(Request) returns (Response) {}

}


message Request {
	string SessionId = 1;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
}
